2011-12-27 Miguel de Dios  <miguel.dedios@artica.es>

	* integria_demo.sql: fixed tiny bug in the filled of table "tconfig".

2011-12-27  Sancho Lerena <slerena@artica.es>

	* include/functions_db.php: Added get_company_roles().
	
	* operation/search.php: Improved search with companies and contacts.
	
	* operation/side_menu.php: Moved reports to a new own block.
	
	* operation/contracts/contract_detail.php,
	operation/contacts/contact_detail.php
	operation/companies/company_detail.php: Improved usability, added
	quick links and "add new" operations between them.
	
	* operation/inventories/inventory_reports.php
	operation/inventories/inventory_reports_detail.php: Added new HTML 
	and PDF render/view.
	
	* images/company.png: New icon for "companies".

2011-12-23  Sancho Lerena <slerena@artica.es>

	* include/functions_tasks.php: Add function to get recursive
	task WU/hr.

	* integria_db.sql,
	integria_dbdata.sql: Suppor for profiles with WIKI perms.

	* operation/projects/csvexport.php
	operation/projects/task.php
	operation/projects/task_detail.php: Recursive task/WU/HR shown.

	* index.php: Add missing javascript for file uploads in the 
	index page.

2011-12-20  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php
	include/styles/integria.css
	include/js/jquery.axuploader.js
	include/file_uploader.php
	operation/incidents/incident_detail.php
	operation/incidents/incident_attach_file.php
	operation/projects/task_files.php
	operation/projects/task_attach_file.php
	operation/download/browse.php
	godmode/setup/filemgr.php: Added to all the file upload control
	a progress bar using an external jquery library modify by us

2011-12-10  Miguel de Dios  <miguel.dedios@artica.es>
	
	* integria_demo.sql: fixed the auth method by default mysql in the demo.
	
	Fixes: #3456757

2011-12-10  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_ui.php: fixed the includes when it is call in other
	file distint to index.php.
	